testsuite/tests/contrib/lkt_semantic/ambiguous_type/test.out
Resolving test.lkt
==================
test.lkt:4:18: error: ambiguous type for expression
4 | @invalid val a = "hello"
  |                  ^^^^^^^

