testsuite/tests/contrib/lkt_semantic/ambiguous_type/test.lkt
# Test that an error message is emitted in the case of an ambiguously typed
# expression.

@invalid val a = "hello"
